# RayTrophi

./: .editorconfig  .gitignore  ARCHITECTURE.md  ARCHITECTURE_TR.md  FloatCurveNode.hpp  LICENSE  LICENSE.txt  QUICK_START_REVIEWER_GUIDE.md  README.md  README_TR.md  RayTrophiStudio.sln  RayTrophi_Kapsamli_Mimari_Rapor.md  VULKAN_NISHITA_EXPANSION.md  build_fix_test.txt  build_log.txt  build_log2.txt  build_log3.txt  codex_viewport_refactor_note.md  render  rgen.spv  rmiss.spv  run_test.wsb  scratch_method.txt  script.py  tmp_size.cpp
RayTrophiStudio/: CMakeLists.txt  RayTrophiStudio.vcxproj  RayTrophiStudio.vcxproj.filters  compile_ptx.bat  compile_shaders.bat  kurallar.ruleset  photon_caustics_plan.md  raytrophi_manifesto_and_plan.md  refactoring_implementation_plan.md  resource.h
RayTrophiStudio/libs/nanovdb/: NanoVDB.h  PNanoVDB.h
RayTrophiStudio/source/header/: OptixWrapper.h
RayTrophiStudio/source/include/: AnimationController.h  AnimationNodes.h  AreaLight.h  AssimpLoader.h  BezierSpline.h  Camera.h  ColliderMeshBVH.h  CpuPhotonMap.h  Dielectric.h  DiffuseLight.h  DirectionalLight.h  EmbreeBVH.h  FluidGrid.h  FoliageAssetLibrary.h  FoliageFwd.h  FractureGenerator.h  GeometryNodesV2.h  Hittable.h  InstanceGroup.h  KeyframeSystem.h  Light.h  Material.h  MaterialManager.h  MaterialNodesV2.h  MaterialProceduralMath.h  MaterialProgram.h  Matrix4x4.h  Mesh.h  MeshModifiers.h  MeshPointiness.h  MeshProfileTimer.h  OptixWrapper.h  OzzRuntime.h  PBRMaterialSnapshot.h  ParticleSimulation.h  PointLight.h  PrincipledBSDF.h  ProjectManager.h  Ray.h  RayPacket.h  (+47 more)
RayTrophiStudio/source/shaders/: PNanoVDB.h  atmosphere_lut.spv  cc_expand_blas.comp  cc_expand_blas.spv  cc_face_normals.comp  cc_face_normals.spv  cc_stencil_apply.spv  cc_vertex_normals.comp  cc_vertex_normals.spv  closesthit.rchit  closesthit.spv  compile_sim_shaders.bat  edit_overlay.spv  edit_overlay.vert  edit_overlay_frag.spv  edit_overlay_point.spv  edit_overlay_point.vert  edit_overlay_point_frag.frag  edit_overlay_point_frag.spv  hair_closesthit.rchit  hair_closesthit.spv  hair_intersection.rint  hair_intersection.spv  hair_shadow_anyhit.rahit  hair_shadow_anyhit.spv  hair_viewport.spv  hair_viewport.vert  hair_viewport_frag.spv  material_preview.spv  material_preview.vert  material_preview_frag.frag  material_preview_frag.spv  material_program.glsl  material_struct.glsl  miss.rmiss  miss.spv  particle_viewport.spv  particle_viewport.vert  particle_viewport_frag.frag  particle_viewport_frag.spv  (+134 more)
raytrac_sdl2/: .gitignore  CMakeLists.txt  OPTIX_MATERIAL_FIX.md  README.md  README_TR.md  SceneLog.txt  anim.gltf  build_log.txt  build_log_2.txt  compile_ptx.bat  compile_shaders.bat  imgui.ini  raygen.ptx  raytrac_sdl2.vcxproj  raytrac_sdl2.vcxproj.filters  raytracing_render_code.rc  scene_ui_backup.cpp
raytrac_sdl2/assets/: README.md  default.glb
raytrac_sdl2/assets/matcaps/: README.md  README_TR.md
raytrac_sdl2/docs/: animation.html  camera.html  hair.html  index.html  nodes.html  render.html  style.css  terrain.html  water.html  world.html
raytrac_sdl2/image/: imgui.ini
raytrac_sdl2/libs/nanovdb/: CNanoVDB.h  GridHandle.h
raytrac_sdl2/manual/: animgraph.html  camera.html  style.css  terrain.html  water.html
raytrac_sdl2/source/: DEV_NOTES_RENDER_BACKEND_INVARIANTS.md  LICENSE  README.md  compile_erosion.bat  compile_ptx.bat
raytrac_sdl2/source/cpp_file/: AtmosphericEffects.cpp  Box.cpp  Dielectric.cpp  EmbreeBVH.cpp  EmissiveMaterial.cpp  Material.cpp  MaterialManager.cpp  OptixWrapper.cpp  ParallelBVHNode_optimized.cpp  PrincipledBSDF.cpp  Renderer.cpp  SmartUVProjection.cpp  Sphere.cpp  Triangle.cpp  globals.cpp  gpucamera.cuh  ray_color.cuh  raygen.cu  scatter_volume_step.h  scene_ui.cpp  ui_modern.cpp  vec3_utils.cuh
raytrac_sdl2/source/header/: AreaLight.h  AssimpLoader.h  AtmosphereProperties.h  Box.h  Camera.h  ColorProcessingParams.h  DirectionalLight.h  EmbreeBVH.h  Hittable.h  HittableList.h  MaterialManager.h  Mesh.h  OptixWrapper.h  ParallelBVHNode.h  ParallelBVHNode_optimized.h  PointLight.h  PrincipledBSDF.h  Quaternion.h  Renderer.h  Texture.h  Triangle.h  globals.h  params.h  payload.h  sbt_data.h  sbt_record.h
raytrac_sdl2/source/include/: AABB.h  AnimationController.h  AnimationNodes.h  AreaLight.h  AssetRegistry.h  AssimpLoader.h  AtmosphereLUT.h  BezierSpline.h  Camera.h  CameraPresets.h  CloudManager.h  ColorProcessingParams.h  Dielectric.h  DiffuseLight.h  DllLoadPolicy.h  EmbreeBVH.h  FluidGrid.h  FoliageFwd.h  FoliageWindSystem.h  ForceField.h  GasSimulator.h  GasVolume.h  GodRaysModel.h  GridFluidSolver.h  HitRecordPacket.h  Hittable.h  HittableInstance.h  HittableList.h  InstanceGroup.h  InstanceManager.h  KeyframeSystem.h  Light.h  Material.h  MaterialManager.h  Matrix4x4.h  Mesh.h  NodeSystemV2.h  OptixAccelManager.h  OptixTypes.h  OptixWrapper.h  (+70 more)
raytrac_sdl2/source/shaders/: atmosphere_lut.comp  closesthit.rchit  closesthit.spv  fix_arrays.py  gradient_test.comp  gradient_test.spv  hair_closesthit.rchit  hair_closesthit.spv  hair_intersection.rint  hair_intersection.spv  hair_shadow_anyhit.rahit  hair_viewport_frag.frag  material_preview.spv  material_preview.vert  material_preview_frag.frag  material_preview_frag.spv  miss.rmiss  miss.rmiss.spv  miss.spv  pbr_texture_policy.glsl  raygen.rgen  raygen.rgen.spv  raygen.spv  rgen.spv  shadow_anyhit.rahit  shadow_anyhit.rchit  shadow_anyhit.spv  shadow_miss.rmiss  shadow_miss.spv  sim_fluid_density_clear.spv  sim_fluid_density_splat.comp  sim_fluid_g2p.comp  sim_fluid_p2g_scatter.comp  sim_grid_sor.comp  sim_grid_subtract_gradient.spv  sim_grid_velocity_dissipate.comp  sim_grid_velocity_dissipate.spv  skinning.spv  solid.spv  solid.vert  (+9 more)
raytrac_sdl2/source/src/: AABB.cpp  AnimationController.cpp  AnimationNodes.cpp  Camera.cpp  CloudManager.cpp  CloudNoise.cuh  Dielectric.cpp  DiffuseLight.cpp  DirectionalLight.cpp  EmbreeBVH.cpp  HittableList.cpp  InstanceGroup.cpp  InstanceGroup_Wind.cpp  InstanceManager.cpp  Light.cpp  Main.cpp  MaterialManager.cpp  Matrix4x4.cpp  Mesh.cpp  OptixAccelManager.cpp  OptixWrapper.cpp  (+60 more)
(+806 files in other folders)
